syntax = "proto3";

package kyve.registry.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/registry/types";

// PoolStatus ...
enum PoolStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // POOL_STATUS_UNSPECIFIED ...
  POOL_STATUS_UNSPECIFIED = 0;
  // POOL_STATUS_ACTIVE ...
  POOL_STATUS_ACTIVE = 1;
  // POOL_STATUS_PAUSED ...
  POOL_STATUS_PAUSED = 2;
  // POOL_STATUS_NO_FUNDS ...
  POOL_STATUS_NO_FUNDS = 3;
  // POOL_STATUS_NOT_ENOUGH_VALIDATORS ...
  POOL_STATUS_NOT_ENOUGH_VALIDATORS = 4;
  // POOL_STATUS_NOT_ENOUGH_STAKE ...
  POOL_STATUS_NOT_ENOUGH_STAKE = 5;
  // POOL_STATUS_UPGRADING ...
  POOL_STATUS_UPGRADING = 6;
}

// BundleProposal ...
message BundleProposal {
  // uploader ...
  string uploader = 1;
  // next_uploader ...
  string next_uploader = 2;
  // storage_id ...
  string storage_id = 3;
  // byte_size ...
  uint64 byte_size = 4;
  // from_height ...
  uint64 from_height = 5 [deprecated = true];
  // to_height ...
  uint64 to_height = 6;
  // created_at ...
  uint64 created_at = 7;
  // voters_valid ...
  repeated string voters_valid = 8;
  // voters_invalid ...
  repeated string voters_invalid = 9;
  // voters_abstain ...
  repeated string voters_abstain = 10;
  // to_key ...
  string to_key = 11;
  // to_value ...
  string to_value = 12;
  // bundle_hash ...
  string bundle_hash = 13;
}

// Protocol ...
message Protocol {
  // version ...
  string version = 1;
  // binaries ...
  string binaries = 2;
  // last_upgrade ...
  uint64 last_upgrade = 3;
  // test
  string test = 4;
}

// Upgrade ...
message UpgradePlan {
  // version ...
  string version = 1;
  // binaries ...
  string binaries = 2;
  // scheduled_at ...
  uint64 scheduled_at = 3;
  // duration ...
  uint64 duration = 4;
}

// DelegationEntries ...
message DelegationEntries {
  // id ...
  uint64 id = 1;
  // balance ...
  string balance = 2;
  // staker ...
  string staker = 3;
  // k_index ...
  uint64 k_index = 4;
}

// DelegationPoolData ...
message DelegationPoolData {
  // Primary keys

  // id ...
  uint64 id = 1;
  // staker ...
  string staker = 2;

  // F1Distribution

  // current_rewards ...
  uint64 current_rewards = 3;
  // total_delegation ...
  uint64 total_delegation = 4;
  // latest_index_k ...
  uint64 latest_index_k = 5;

  // Stats

  // delegator_count ...
  uint64 delegator_count = 6;
  // latest_index_was_undelegation ...
  bool latest_index_was_undelegation = 7;
}

// Delegator ...
message Delegator {
  // id ...
  uint64 id = 1;
  // k_index ...
  uint64 k_index = 2;
  // delegation_amount ...
  uint64 delegation_amount = 3;
  // staker ...
  string staker = 4;
  // delegator ...
  string delegator = 5;
}

// Funder ...
message Funder {
  // account ...
  string account = 2;
  // fund_id ...
  uint64 pool_id = 1;
  // amount ...
  uint64 amount = 3;
}

// Pool ...
message Pool {
  // id ...
  uint64 id = 1;
  // creator ...
  string creator = 2;
  // name ...
  string name = 3;
  // runtime ...
  string runtime = 4;
  // logo ...
  string logo = 5;
  // versions ...
  string versions = 6 [deprecated = true];
  // config ...
  string config = 7;

  // current_height ...
  uint64 current_height = 8;
  // total_bytes ...
  uint64 total_bytes = 9;
  // total_bundles ...
  uint64 total_bundles = 10;
  // total_bundle_rewards ...
  uint64 total_bundle_rewards = 11;

  // start_height ...
  uint64 start_height = 12 [deprecated = true];
  // upload_interval ...
  uint64 upload_interval = 13;
  // operating_cost ...
  uint64 operating_cost = 14;
  // paused ...
  bool paused = 15;

  // funders ...
  repeated string funders = 16;
  // lowest_funder ...
  string lowest_funder = 17;
  // total_funds ...
  uint64 total_funds = 18;

  // stakers ...
  repeated string stakers = 19;
  // lowest_staker ...
  string lowest_staker = 20;
  // total_stake ...
  uint64 total_stake = 21;
  // total_delegation ...
  uint64 total_delegation = 22;

  // bundle_proposal ...
  kyve.registry.v1beta1.BundleProposal bundle_proposal = 23;

  // max_bundle_size ...
  uint64 max_bundle_size = 24;

  // protocol ...
  kyve.registry.v1beta1.Protocol protocol = 25;
  // upgrade_plan ...
  kyve.registry.v1beta1.UpgradePlan upgrade_plan = 26;

  // start_key ...
  string start_key = 27;
  // current_key ...
  string current_key = 28;
  // current_value ...
  string current_value = 29;
  // inactive_stakers ...
  repeated string inactive_stakers = 30;
  // total_inactive_stake ...
  uint64 total_inactive_stake = 31;
  // min_stake ...
  uint64 min_stake = 32;
  // status ...
  PoolStatus status = 33;
}

// Proposal ...
message Proposal {
  // storage_id ...
  string storage_id = 1;
  // pool_id ...
  uint64 pool_id = 2;
  // uploader ...
  string uploader = 3;
  // from_height ...
  uint64 from_height = 4;
  // to_height ...
  uint64 to_height = 5;
  // finalized_at ...
  uint64 finalized_at = 6;
  // id ...
  uint64 id = 7;
  // key ...
  string key = 8;
  // value ...
  string value = 9;
  // bundle_hash ...
  string bundle_hash = 10;
}

// StakerStatus ...
enum StakerStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // STAKER_STATUS_UNSPECIFIED ...
  STAKER_STATUS_UNSPECIFIED = 0;
  // STAKER_STATUS_ACTIVE ...
  STAKER_STATUS_ACTIVE = 1;
  // STAKER_STATUS_INACTIVE ...
  STAKER_STATUS_INACTIVE = 2;
}

// Staker ...
message Staker {
  // staker ...
  string account = 1;
  // pool_id ...
  uint64 pool_id = 2;
  // amount ...
  uint64 amount = 3;
  // unbonding_amount ...
  uint64 unbonding_amount = 4;
  // commission ...
  string commission = 5;
  // moniker ...
  string moniker = 6;
  // website ...
  string website = 7;
  // logo
  string logo = 8;
  // points
  uint64 points = 9;
  // status
  StakerStatus status = 10;
}

// UnbondingStakingEntry
// Creates an entry for an upcoming unbonding of a staker which is put in the unbonding fifo queue and
// executed after the unbonding time is over.
message UnbondingStakingQueueEntry {
  // index is a monotonically increasing integer to order the entries
  uint64 index = 1;
  // staker ...
  string staker = 2;
  // pool_id ...
  uint64 pool_id = 3;
  // amount ...
  uint64 amount = 4;
  // creation_time ...
  uint64 creation_time = 5;
}

// UnbondingStakingEntry
// Creates an entry for an upcoming unbonding of a staker which is put in the unbonding fifo queue and
// executed after the unbonding time is over.
message UnbondingStaker {
  // staker ...
  string staker = 1;
  // pool_id ...
  uint64 pool_id = 2;
  // amount ...
  uint64 unbonding_amount = 3;
}

// UnbondingState stores the state for the unbonding of stakes and delegations.
message UnbondingStakingQueueState {
  // low_index ...
  uint64 low_index = 1;
  // high_index ...
  uint64 high_index = 2;
}

// UnbondingStakingEntry
// Creates an entry for an upcoming unbonding of a staker which is put in the unbonding fifo queue and
// executed after the unbonding time is over.
message UnbondingDelegationQueueEntry {
  // index is a monotonically increasing integer to order the entries
  uint64 index = 1;
  // staker ...
  string staker = 2;
  // delegator ...
  string delegator = 3;
  // pool_id ...
  uint64 pool_id = 4;
  // amount ...
  uint64 amount = 5;
  // creation_time ...
  uint64 creation_time = 6;
}

// UnbondingState stores the state for the unbonding of stakes and delegations.
message UnbondingDelegationQueueState {
  // low_index ...
  uint64 low_index = 1;
  // high_index ...
  uint64 high_index = 2;
}

// RedelegationCooldown ...
message RedelegationCooldown {
  // low_index ...
  string address = 1;
  // high_index ...
  uint64 creation_date = 2;
}

// CommissionChangeQueueEntry ...
message CommissionChangeQueueEntry {
  // index is a monotonically increasing integer to order the entries
  uint64 index = 1;
  // staker ...
  string staker = 2;
  // pool_id ...
  uint64 pool_id = 3;
  // commission ...
  string commission = 4;
  // commission ...
  int64 creation_date = 5;
}

// CommissionChangeQueueState ...
message CommissionChangeQueueState {
  // low_index ...
  uint64 low_index = 1;
  // high_index ...
  uint64 high_index = 2;
}
